--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.1.16",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animate": "1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
